[package]
name = "f7-cts-backend"
version = "0.1.1"
authors = ["Thomas Auer <thauer@edu.aau.at>"]
edition = "2021"
description = "A simple CTS-Backend server over Actix as interview challenge"
repository = "https://github.com/ThompsonA93/CTS-Backend"
license = "MIT"

[dependencies]
actix-web = "4"

[dev-dependencies]
# rusty-hook = "^0.11.2"